--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svg-to-excalidraw",
-  "version": "0.0.2",
+  "name": "@walshhub/svg-to-excalidraw",
+  "version": "0.0.3",
   "description": "Convert SVG to Excalidraw’s file format",
   "main": "dist/bundle.js",
   "files": [
